fix image bug on safari

--- a/public/styles/show.css
+++ b/public/styles/show.css
@@ -141,3 +141,10 @@
 		padding: 0px;
 	}
 }
+
+@media only screen and (max-width: 768px) {
+	#show-beach-img {
+		height: intrinsic;
+	}
+
+}
